# RayMage

./: .gitignore  CMakeLists.txt  README.md  color_rgb.cpp  color_rgb.h  main.cpp  player.cpp  player.h  test_map.h
Auxiliary/: colors.h  keys.h  keyscanner.cpp  keyscanner.h  raycaster.cpp  raycaster.h  renderer.cpp  renderer.h
Engine/: colors.cpp  keys.cpp  renderer.cpp  renderer.h
